Fix IndexArchiveProvider used for multiple data sources