@@ -2,8 +2,7 @@ package de.cxp.ocs.smartsuggest;
 
 import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -11,10 +10,15 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+import de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester;
+import de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneSuggesterFactory;
+import de.cxp.ocs.smartsuggest.spi.*;
+import de.cxp.ocs.smartsuggest.updater.LocalIndexArchiveProvider;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 
@@ -23,18 +27,17 @@ import de.cxp.ocs.smartsuggest.querysuggester.CompoundQuerySuggester;
 import de.cxp.ocs.smartsuggest.querysuggester.QuerySuggester;
 import de.cxp.ocs.smartsuggest.querysuggester.QuerySuggesterProxy;
 import de.cxp.ocs.smartsuggest.querysuggester.Suggestion;
-import de.cxp.ocs.smartsuggest.spi.SuggestDataProvider;
-import de.cxp.ocs.smartsuggest.spi.SuggestRecord;
+import org.junit.jupiter.api.io.TempDir;
 
 class QuerySuggestManagerTest {
 
 	private static final int UPDATE_LATENCY = 2000;
 
-	private String	testTenant1	= "test.1";
-	private String	testTenant2	= "test.2";
+	private String testTenant1 = "test.1";
+	private String testTenant2 = "test.2";
 
-	private RemoteSuggestDataProviderSimulation	serviceMock	= new RemoteSuggestDataProviderSimulation();
-	private QuerySuggestManager					querySuggestManager;
+	private RemoteSuggestDataProviderSimulation serviceMock = new RemoteSuggestDataProviderSimulation();
+	private QuerySuggestManager                 querySuggestManager;
 
 	@AfterEach
 	void afterEach() {
@@ -64,8 +67,8 @@ class QuerySuggestManagerTest {
 		// some initialization delay + latency
 		Thread.sleep(UPDATE_LATENCY);
 
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
-		assertThat(suggester.suggest("bar").get(0).getLabel()).isEqualTo("bart");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
+		assertThat(suggester.suggest("bar").getFirst().getLabel()).isEqualTo("bart");
 	}
 
 	@Test
@@ -83,14 +86,14 @@ class QuerySuggestManagerTest {
 
 		// both suggesters are updated at the same time
 		Thread.sleep(UPDATE_LATENCY);
-		assertThat(suggester1.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
-		assertThat(suggester2.suggest("bar").get(0).getLabel()).isEqualTo("bart");
+		assertThat(suggester1.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
+		assertThat(suggester2.suggest("bar").getFirst().getLabel()).isEqualTo("bart");
 
 		// first suggester should not get a delay because of the second suggester
 		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "foofigher")));
-		assertThat(suggester1.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
+		assertThat(suggester1.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
 		Thread.sleep(UPDATE_LATENCY);
-		assertThat(suggester1.suggest("foo").get(0).getLabel()).isEqualTo("foofigher");
+		assertThat(suggester1.suggest("foo").getFirst().getLabel()).isEqualTo("foofigher");
 	}
 
 	@Test
@@ -103,7 +106,7 @@ class QuerySuggestManagerTest {
 		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "fnord")));
 		QuerySuggester suggester = querySuggestManager.getQuerySuggester(testTenant1, true);
 
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
 
 		serviceMock.setAvailability(false); // slow service
 		try {
@@ -115,12 +118,12 @@ class QuerySuggestManagerTest {
 		}
 		Thread.sleep(UPDATE_LATENCY);
 		// because of unavailability, the suggestions should not be updated
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
 
 		serviceMock.setAvailability(true);
 		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "foofighter")));
 		Thread.sleep(UPDATE_LATENCY);
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("foofighter");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("foofighter");
 	}
 
 	// run this manually to test if the JVM is shutdown although the
@@ -160,11 +163,11 @@ class QuerySuggestManagerTest {
 				.setMinimalUpdateRate()
 				.build();
 
-		serviceMock.updateSuggestions(testTenant1, Arrays.asList(s("foo", "1")));
+		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "1")));
 		QuerySuggester suggester = querySuggestManager.getQuerySuggester(testTenant1, true);
 		assertThat(suggester).isNotNull();
 
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("1");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("1");
 
 		querySuggestManager.destroyQuerySuggester(testTenant1);
 
@@ -172,7 +175,7 @@ class QuerySuggestManagerTest {
 		assertThat(suggester.suggest("foo")).isEmpty();
 
 		// assert no updates are made anymore
-		serviceMock.updateSuggestions(testTenant1, Arrays.asList(s("foo", "2")));
+		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "2")));
 		Thread.sleep(1000);
 		assertThat(suggester.suggest("foo")).isEmpty();
 	}
@@ -191,7 +194,7 @@ class QuerySuggestManagerTest {
 				.build();
 
 		// subtest 1: only one data provider has data
-		dp1.updateSuggestions("index1", Arrays.asList(new SuggestRecord("query1", "matching text", null, null, 10L)));
+		dp1.updateSuggestions("index1", List.of(new SuggestRecord("query1", "matching text", null, null, 10L)));
 		QuerySuggester querySuggester1 = querySuggestManager.getQuerySuggester("index1", true);
 
 		assertTrue(querySuggester1 instanceof QuerySuggesterProxy, "but was instanceof " + querySuggester1.getClass().getCanonicalName());
@@ -202,8 +205,8 @@ class QuerySuggestManagerTest {
 		assertThat(suggestions1).allMatch(s -> "query1".equals(s.getLabel())).as("query1 as label expected");
 
 		// subtest 2: two data providers have data
-		dp1.updateSuggestions("index2", Arrays.asList(new SuggestRecord("query 1.2", "arbitrary matching text", null, null, 10L)));
-		dp2.updateSuggestions("index2", Arrays.asList(new SuggestRecord("query 2.2", "more matching text", null, null, 10L)));
+		dp1.updateSuggestions("index2", List.of(new SuggestRecord("query 1.2", "arbitrary matching text", null, null, 10L)));
+		dp2.updateSuggestions("index2", List.of(new SuggestRecord("query 2.2", "more matching text", null, null, 10L)));
 		QuerySuggester querySuggester2 = querySuggestManager.getQuerySuggester("index2", true);
 
 		verify(mock, times(1)).hasData("index2");
@@ -213,9 +216,63 @@ class QuerySuggestManagerTest {
 		assertThat(suggestions2).allMatch(s -> s.getLabel().endsWith("2"));
 	}
 
+	@Test
+	void testSuggesterIsInitializedByArchiveDataProviders(@TempDir Path baseDir) throws Exception {
+		LocalIndexArchiveProvider archiveProvider = new LocalIndexArchiveProvider();
+		LuceneSuggesterFactory factory = new LuceneSuggesterFactory(baseDir);
+		try (
+				LuceneQuerySuggester suggester = factory.getSuggester(SuggestData.builder()
+						.modificationTime(System.currentTimeMillis()).type("keywords")
+						.suggestRecords(singletonList(s("foo", "tasty food")))
+						.build(), new SuggestConfig())
+		) {
+			IndexArchive indexArchive = factory.createArchive(suggester);
+			archiveProvider.store("index1", indexArchive);
+		}
+
+		querySuggestManager = QuerySuggestManager.builder()
+				.withArchiveDataProvider(archiveProvider)
+				.setMinimalUpdateRate()
+				.build();
+		QuerySuggester querySuggester = querySuggestManager.getQuerySuggester("index1", true);
+		assert querySuggester.isReady();
+		assertEquals(1L, querySuggester.recordCount());
+		assertEquals(1, querySuggester.suggest("foo").size());
+	}
+
+	@Test
+	void testCompoundDataSourceIndexCanBeArchivedAndRestored() throws Exception {
+		RemoteSuggestDataProviderSimulation dp1 = new RemoteSuggestDataProviderSimulation();
+		RemoteSuggestDataProviderSimulation dp2 = new RemoteSuggestDataProviderSimulation();
+		dp1.updateSuggestions("indexA", List.of(new SuggestRecord("query 1.2", "arbitrary matching text", null, null, 10L)));
+		dp2.updateSuggestions("indexA", List.of(new SuggestRecord("query 2.2", "more matching text", null, null, 10L)));
+		LocalIndexArchiveProvider archiveProvider = new LocalIndexArchiveProvider();
+		querySuggestManager = QuerySuggestManager.builder()
+				.withSuggestDataProvider(dp1)
+				.withSuggestDataProvider(dp2)
+				.withArchiveDataProvider(archiveProvider)
+				.setMinimalUpdateRate()
+				.build();
+		QuerySuggester suggester = querySuggestManager.getQuerySuggester("indexA", true);
+		assert suggester.isReady();
+		assertEquals(2, suggester.recordCount());
+		assert archiveProvider.hasData("indexA");
+
+		// recreate query suggester without the suggest-data-providers
+		querySuggestManager.destroyQuerySuggester("indexA");
+		querySuggestManager.close();
+		querySuggestManager = QuerySuggestManager.builder()
+				.withArchiveDataProvider(archiveProvider)
+				.setMinimalUpdateRate()
+				.build();
+		suggester = querySuggestManager.getQuerySuggester("indexA", true);
+		assert suggester.isReady();
+		assertEquals(2, suggester.recordCount());
+	}
+
 	/**
 	 * internal method that uses the QueryMapperManager in a wrong way.
-	 * 
+	 *
 	 * @param apiStub
 	 * @return
 	 */
@@ -228,10 +285,10 @@ class QuerySuggestManagerTest {
 				.getQuerySuggester(testTenant1);
 	}
 
-	private SuggestRecord s(String variant, String bestMatch) {
+	private SuggestRecord s(String secondaryText, String primaryText) {
 		SuggestRecord r = new SuggestRecord();
-		r.setPrimaryText(bestMatch);
-		r.setSecondaryText(variant);
+		r.setPrimaryText(primaryText);
+		r.setSecondaryText(secondaryText);
 		return r;
 	}
 
